# cli-file-compressor

./: Cargo.toml  README.md  build.sh  docker-compose.yml
src/: cli.rs  compressor.rs  config.rs  main.rs  report.rs  validator.rs
